--- a/src/main/webapp/logsnap/package.json
+++ b/src/main/webapp/logsnap/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
   "dev": "react-scripts start --host 0.0.0.0",
-  "build": "react-scripts build",
+  "build": "react-scripts build && npm run copy-build",
+  "copy-build": "copyfiles -u 1 build/**/* ../../resources/static",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "copyfiles": "^2.4.1"
   }
 }
