--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+# ===========================================
+# 🚀 LogSnap Full Stack Project (.gitignore)
+# Covers Spring Boot (Java) + React Frontend
+# ===========================================
+
+# === SPRING BOOT / MAVEN ===
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# === STS / IntelliJ / VSCode ===
 .apt_generated
 .classpath
 .factorypath
@@ -12,14 +18,13 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+.vscode/
 
-### NetBeans ###
+# === NETBEANS ===
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -29,5 +34,28 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+# === REACT FRONTEND ===
+# Node modules and caches
+src/main/webapp/logsnap/node_modules/
+src/main/webapp/logsnap/.cache/
+src/main/webapp/logsnap/build/
+
+# Environment files
+src/main/webapp/logsnap/.env
+src/main/webapp/logsnap/.env.local
+src/main/webapp/logsnap/.env.development.local
+src/main/webapp/logsnap/.env.test.local
+src/main/webapp/logsnap/.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# System files
+.DS_Store
+Thumbs.db
+
+# === DEPLOYMENT ARTIFACTS ===
+src/main/resources/static/
