--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=LogSnap
 
-# Database (Railway will inject real credentials automatically)
+# Database (Railway injects automatically)
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -13,21 +13,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Server port (Railway uses this env variable)
 server.port=${PORT:8080}
 
-
-## Server
-#server.port=8080
-#server.address=0.0.0.0
-#
-#
-## Database
-#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/logsnap?useSSL=false&serverTimezone=UTC
-#
-#spring.datasource.username=root
-#spring.datasource.password=12345678
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# ================== HIKARI CONNECTION POOL SETTINGS ==================
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.keepalive-time=10000
+spring.datasource.hikari.pool-name=LogSnapHikariPool
 
 # Swagger
 springdoc.api-docs.enabled=true
