updated application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=LogSnap
 
-# Database (Railway injects automatically)
+# Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-# Hibernate & JPA
-spring.jpa.hibernate.ddl-auto=update
+# Disable schema update (VERY IMPORTANT)
+spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Server port (Railway uses this env variable)
 server.port=${PORT:8080}
 
-# ================== HIKARI CONNECTION POOL SETTINGS ==================
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
+# Hikari Pool ? STRICT LIMITS FOR RENDER/RAILWAY
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=10000
-spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.max-lifetime=15000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.keepalive-time=10000
