updated application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,15 +13,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=${PORT:8080}
 
-# Hikari Pool ? STRICT LIMITS FOR RENDER/RAILWAY
-spring.datasource.hikari.maximum-pool-size=3
-spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=0
 spring.datasource.hikari.idle-timeout=10000
-spring.datasource.hikari.max-lifetime=15000
+spring.datasource.hikari.max-lifetime=20000
 spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.validation-timeout=3000
-spring.datasource.hikari.keepalive-time=10000
+spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.pool-name=LogSnapHikariPool
+spring.datasource.hikari.auto-commit=true
 
 # Swagger
 springdoc.api-docs.enabled=true
